# TaikoSmartCardReader

./: .gitignore  Makefile  README.md  build64.bat  cross-mingw-64.txt  meson.build  vcpkg.json
.github/workflows/: build.yml
src/: constants.h  dllmain.cpp  helpers.cpp  helpers.h  scard.cpp  scard.h  scardreader.def
